--- a/alt/apps.json
+++ b/alt/apps.json
@@ -29,13 +29,13 @@
       "developerName": "Yattee",
       "subtitle": "Video player for Invidious and Piped",
       "version": "1.3",
-      "versionDate": "2021-12-19",
-      "versionDescription": "- New setting: pause when player is closed (fix #40)\n- New settings for Picture in Picture\n- Close PiP when starting playing other video\n- Close PiP when player is opened\n    - Close PiP and open player when application enters foreground \n- New player placeholder when playing in PiP, context menu with exit option\n- Likes/dislikes count is shown only when it's available\n- Improved loading of list of available streams\n- Added context menu to close current video from player bar\nImproved player queue rows buttons labels (added icons)\n- Change effect of organizing favorites",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-beta.2/Yattee-1.3-beta.2-iOS.ipa",
+      "versionDate": "2021-12-27",
+      "versionDescription": "Improved history of watched videos:\n- Display progress of watching while browsing videos lists\n- Mark watched videos with badge or decreased opacity\n- Customisable percentage of when to consider video as watched\n- Customisable default action for watching (resume or restart), options in context menus\nFixed subscriptions not loading properly\nFixed recognising live videos when using Piped instances\nFixed video details alignment\nImproved thumbnails loading\nFixed crash when switching from live video to regular video\nOther minor changes",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-beta.3/Yattee-1.3-beta.3-iOS.ipa",
       "localizedDescription": "Video player with support for Invidious and Piped built for iOS, tvOS and macOS.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 2118100,
+      "size": 2143674,
       "beta": true,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
