Add v1.3-beta.4 (fixes #1)

--- a/alt/apps.json
+++ b/alt/apps.json
@@ -24,19 +24,18 @@
       ]
     },
     {
-      "name": "Yattee",
+      "name": "Yattee (Beta)",
       "bundleIdentifier": "stream.yattee.app.beta",
       "developerName": "Yattee",
       "subtitle": "Video player for Invidious and Piped",
       "version": "1.3",
-      "versionDate": "2021-12-27",
-      "versionDescription": "Improved history of watched videos:\n- Display progress of watching while browsing videos lists\n- Mark watched videos with badge or decreased opacity\n- Customisable percentage of when to consider video as watched\n- Customisable default action for watching (resume or restart), options in context menus\nFixed subscriptions not loading properly\nFixed recognising live videos when using Piped instances\nFixed video details alignment\nImproved thumbnails loading\nFixed crash when switching from live video to regular video\nOther minor changes",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-beta.3/Yattee-1.3-beta.3-iOS.ipa",
+      "versionDate": "2022-01-02",
+      "versionDescription": "- Added option to lock portrait mode when browsing videos\n- Added options to handle entering fullscreen on rotation:\n  - Honor system rotation lock (#38)\n  - Lock landscape when entering fullscreen via rotation\n- Added \"Play/Shuffle All\" buttons to channel/user playlists (#39)\n- Added option to show/hide history of played videos in player view\n- Added option to show/hide username in accounts switcher button\n- Added options for watched videos:\n  - Use both badge/decreased opacity for marking videos\n  - Select badge color or make it dependent on system color scheme\n  - Reset watching status when playing video again\n- Improved performance when loading video details (#46)\n- Improved search suggestions layout by separating buttons to start search for query and append text\n- Fixed issue with displaying video time in system playback controls\n- Other minor changes",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-beta.4/Yattee-1.3-beta.4-iOS.ipa",
       "localizedDescription": "Video player with support for Invidious and Piped built for iOS, tvOS and macOS.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 2143674,
-      "beta": true,
+      "size": 2175904,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
