--- a/alt/apps.json
+++ b/alt/apps.json
@@ -29,13 +29,13 @@
       "developerName": "Yattee",
       "subtitle": "Video player for Invidious and Piped",
       "version": "1.3",
-      "versionDate": "2022-01-02",
-      "versionDescription": "- Added option to lock portrait mode when browsing videos\n- Added options to handle entering fullscreen on rotation:\n  - Honor system rotation lock (#38)\n  - Lock landscape when entering fullscreen via rotation\n- Added \"Play/Shuffle All\" buttons to channel/user playlists (#39)\n- Added option to show/hide history of played videos in player view\n- Added option to show/hide username in accounts switcher button\n- Added options for watched videos:\n  - Use both badge/decreased opacity for marking videos\n  - Select badge color or make it dependent on system color scheme\n  - Reset watching status when playing video again\n- Improved performance when loading video details (#46)\n- Improved search suggestions layout by separating buttons to start search for query and append text\n- Fixed issue with displaying video time in system playback controls\n- Other minor changes",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-beta.4/Yattee-1.3-beta.4-iOS.ipa",
+      "versionDate": "2022-01-07",
+      "versionDescription": "\n- Added infinite scroll to Search\n- Added infinite scroll to Comments\n- Redesigned Settings\n- Added Help section in settings\n- Added help link for adding Invidious account\n- Added refresh action to Subscriptions/Popular/Trending (pull to refresh/CMD+R)\n- Added setting to disable thumbnails rounding\n- Improved search suggestion buttons area\n- Backported blur effect to thumbnail badges/player controls for iOS 14\n -Other minor improvements",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-beta.5/Yattee-1.3-beta.5-iOS.ipa",
       "localizedDescription": "Video player with support for Invidious and Piped built for iOS, tvOS and macOS.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 2175904,
+      "size": 2405716,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
