--- a/alt/apps.json
+++ b/alt/apps.json
@@ -30,12 +30,12 @@
       "subtitle": "Video player for Invidious and Piped",
       "version": "1.3",
       "versionDate": "2022-01-07",
-      "versionDescription": "\n- Added infinite scroll to Search\n- Added infinite scroll to Comments\n- Redesigned Settings\n- Added Help section in settings\n- Added help link for adding Invidious account\n- Added refresh action to Subscriptions/Popular/Trending (pull to refresh/CMD+R)\n- Added setting to disable thumbnails rounding\n- Improved search suggestion buttons area\n- Backported blur effect to thumbnail badges/player controls for iOS 14\n -Other minor improvements",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-beta.5/Yattee-1.3-beta.5-iOS.ipa",
+      "versionDescription": "- Fixed Refresh button which was displaying in videos listing background\n- Added details of SponsorBlock categories\n- Decreased size of thumbnails badges\n- Mark rotation features as experimental\n- Experimental: Added option for rotating and locking landscape when entering full screen with button\n- Other minor improvements",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-beta.6/Yattee-1.3-beta.6-iOS.ipa",
       "localizedDescription": "Video player with support for Invidious and Piped built for iOS, tvOS and macOS.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 2405716,
+      "size": 2411294,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
