--- a/alt/apps.json
+++ b/alt/apps.json
@@ -28,10 +28,10 @@
       "bundleIdentifier": "stream.yattee.app.beta",
       "developerName": "Yattee",
       "subtitle": "Video player for Invidious and Piped",
-      "version": "1.3",
-      "versionDate": "2022-01-07",
-      "versionDescription": "- Fixed Refresh button which was displaying in videos listing background\n- Added details of SponsorBlock categories\n- Decreased size of thumbnails badges\n- Mark rotation features as experimental\n- Experimental: Added option for rotating and locking landscape when entering full screen with button\n- Other minor improvements",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-beta.6/Yattee-1.3-beta.6-iOS.ipa",
+      "version": "1.3.1",
+      "versionDate": "2022-01-09",
+      "versionDescription": "- Fixed search suggestion layout when query is corrected by server\n- Fixed restoring player queue when restarting the app\n- Fixed opening channel from video details\n- Other minor improvements",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-rc/Yattee-1.3-rc-iOS.ipa",
       "localizedDescription": "Video player with support for Invidious and Piped built for iOS, tvOS and macOS.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
