--- a/alt/apps.json
+++ b/alt/apps.json
@@ -8,34 +8,14 @@
       "bundleIdentifier": "stream.yattee.app",
       "developerName": "Yattee",
       "subtitle": "Video player for Invidious and Piped",
-      "version": "1.2",
-      "versionDate": "2021-12-10",
-      "versionDescription": "- Support for iOS 14\nComments for videos (for Piped)\n  - Select instance to load comments from or disable (Services settings)\n  - Replies and pagination\n  - Open author channel with tap and hold\n  - Display comments in separate tab or below video description (Services settings)\nNew, custom UI for Search\n  - Tapping suggestions updates text field\n  - Tap top suggestion to search\n  - Improved layout\nSettings\n  - Enable/disable storing recent videos and channels\n  - Show/hide sections (Favorites, Popular, Trending...)\nMinor improvements and fixes\n  - Tap and hold related videos to queue\n  - Tap and hold video title in player to close current video",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.2/Yattee-1.2-iOS.ipa",
+      "version": "1.3",
+      "versionDate": "2021-01-20",
+      "versionDescription": "- Improved watch history\n  - Display progress of watching while browsing videos lists\n  - Mark watched videos with badge or decreased opacity\n  - Select badge color or make it dependent on system color scheme\n  - Customisable percentage of when to mark video as watched\n  - Customisable default action for watching (resume or restart), options in videos context menus\n  - Reset watching status when playing video again\n  - Added setting to show or hide list of played videos in player view\n- Added infinite scroll to Search\n- Added infinite scroll to Comments\n- Added \"Play/Shuffle All\" buttons to channel/user playlists\n- Redesigned Settings\n- Added setting: Pause when player is closed\n- Added settings for Picture in Picture:\n  - Close PiP when starting playing other video\n  - Close PiP when player is opened\n  - Close PiP and open player when application enters foreground\n- Added setting to display channel subscriptions count\n- Added setting to show/hide username in accounts switcher button\n- Improved search suggestions layout by separating buttons to start search for query and append text\n- Added channel thumbnail in player. Tap and hold to open\n- Added setting to disable thumbnails rounding\n- Decreased size of thumbnails badges\n- iOS, macOS: Added refresh action to Subscriptions/Popular/Trending (pull to refresh)\n- Added Help section in Settings\n- Added help link for adding Invidious account\n- Added details of SponsorBlock categories in Settings\n- Added context menu to close current video from player bar\n- Backported blur effect to thumbnail badges/player controls for iOS 14\n- Improved performance during loading video details\n- Experimental: Added setting to lock portrait mode when browsing videos\n- Experimental: Added settings to handle entering fullscreen on rotation:\n  - Honor system rotation lock\n  - Lock landscape when entering fullscreen via rotation\n- Experimental: Added option for rotating and locking landscape when entering full screen with button\n- Other fixes and improvements",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3/Yattee-1.3-iOS.ipa",
       "localizedDescription": "Video player with support for Invidious and Piped built for iOS, tvOS and macOS.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 2082672,
-      "beta": false,
-      "screenshotURLs": [
-        "https://r.yattee.stream/screenshots/iOS/trending.png",
-        "https://r.yattee.stream/screenshots/iOS/player.png",
-        "https://r.yattee.stream/screenshots/iOS/search-suggestions.png"
-      ]
-    },
-    {
-      "name": "Yattee (Beta)",
-      "bundleIdentifier": "stream.yattee.app.beta",
-      "developerName": "Yattee",
-      "subtitle": "Video player for Invidious and Piped",
-      "version": "1.3.1",
-      "versionDate": "2022-01-09",
-      "versionDescription": "- Fixed search suggestion layout when query is corrected by server\n- Fixed restoring player queue when restarting the app\n- Fixed opening channel from video details\n- Other minor improvements",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3-rc/Yattee-1.3-rc-iOS.ipa",
-      "localizedDescription": "Video player with support for Invidious and Piped built for iOS, tvOS and macOS.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
-      "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
-      "tintColor": "21335C",
-      "size": 2411294,
+      "size": 2417999,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
