--- a/alt/apps.json
+++ b/alt/apps.json
@@ -7,12 +7,12 @@
       "name": "Yattee",
       "bundleIdentifier": "stream.yattee.app",
       "developerName": "Yattee",
-      "subtitle": "Video player for Invidious and Piped",
-      "version": "1.3.1",
-      "versionDate": "2021-01-24",
-      "versionDescription": "- Fixed selecting stream quality\n-Fixed showing Account/Settings buttons when only Search section is visible",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3.1/Yattee-1.3.1-iOS.ipa",
-      "localizedDescription": "Video player with support for Invidious and Piped built for iOS, tvOS and macOS.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
+      "subtitle": "Alternative YouTube frontend",
+      "version": "1.3.2",
+      "versionDate": "2021-02-26",
+      "versionDescription": "- Fixed issue which caused playlist not to open when history saving is disabled",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3.2/Yattee-1.3.2-iOS.ipa",
+      "localizedDescription": "Alternative YouTube frontent for iOS, tvOS and macOS built with Invidious and Piped.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
       "size": 2419509,
