--- a/alt/apps.json
+++ b/alt/apps.json
@@ -9,13 +9,32 @@
       "developerName": "Yattee",
       "subtitle": "Alternative YouTube frontend",
       "version": "1.3.2",
-      "versionDate": "2021-02-26",
+      "versionDate": "2022-02-26",
       "versionDescription": "- Fixed issue which caused playlist not to open when history saving is disabled",
       "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3.2/Yattee-1.3.2-iOS.ipa",
       "localizedDescription": "Alternative YouTube frontent for iOS, tvOS and macOS built with Invidious and Piped.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
       "size": 2419509,
+      "screenshotURLs": [
+        "https://r.yattee.stream/screenshots/iOS/trending.png",
+        "https://r.yattee.stream/screenshots/iOS/player.png",
+        "https://r.yattee.stream/screenshots/iOS/search-suggestions.png"
+      ]
+    },
+    {
+      "name": "Yattee Alpha",
+      "bundleIdentifier": "stream.yattee.app.alpha",
+      "developerName": "Yattee",
+      "subtitle": "Alternative YouTube frontend",
+      "version": "1.4.alpha.1",
+      "versionDate": "2022-03-20",
+      "versionDescription": "- New player built with MPV\n  - 4K playback support\n  - Much better at keeping playing high quality adaptive streams\n- New player controls\n - Player gestures tap twice on the left/center/right of player to go back 10s/play-pause/go forward 10s\n - Dislikes counter from Return YouTube Dislike - disabled by default, to enable in Player settings\n- Reorganized browser toolbars\n  -Player always stays in same bottom-most place\n- Better translucency effect\n- Fixed parsing video date in subscriptions\n - Other minor changes\n\nWhat's missing (comparing to v1.3)\n- Picture-in-Picture and AirPlay\n - Subtitles\n - Playback rate change\n\nKnown issues\n- Player queue may not work properly\n - Video may close prematurely\n - Multiple seeks may cause crash\n - Some FPS may be dropped when presenting controls",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.4-alpha.1/Yattee-1.4-alpha.1-iOS.ipa",
+      "localizedDescription": "Alternative YouTube frontent for iOS, tvOS and macOS built with Invidious and Piped.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
+      "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
+      "tintColor": "21335C",
+      "size": 12072607,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
