--- a/alt/apps.json
+++ b/alt/apps.json
@@ -27,14 +27,14 @@
       "bundleIdentifier": "stream.yattee.app.alpha",
       "developerName": "Yattee",
       "subtitle": "Alternative YouTube frontend",
-      "version": "1.4.alpha.2",
-      "versionDate": "2022-03-27",
-      "versionDescription": "1.4.alpha.2\n- Added new quality settings\n- Fix drawing player on some devices\n- Fix closing fullscreen on closing player\n- Includes fixes from 1.3.3 release\n\n1.4\n- New player built with MPV\n  - 4K playback support\n  - Much better at keeping playing high quality adaptive streams\n- New player controls\n - Player gestures tap twice on the left/center/right of player to go back 10s/play-pause/go forward 10s\n - Dislikes counter from Return YouTube Dislike - disabled by default, to enable in Player settings\n- Reorganized browser toolbars\n  -Player always stays in same bottom-most place\n- Better translucency effect\n- Fixed parsing video date in subscriptions\n - Other minor changes\n\nWhat's missing (comparing to v1.3)\n- Picture-in-Picture and AirPlay\n - Subtitles\n - Playback rate change\n\nKnown issues\n- Player queue may not work properly\n - Video may close prematurely\n - Multiple seeks may cause crash\n - Some FPS may be dropped when presenting controls",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.4-alpha.2/Yattee-1.4-alpha.2-iOS.ipa",
+      "version": "1.4.alpha.3",
+      "versionDate": "2022-04-04",
+      "versionDescription": "1.4.alpha.3\n- Fix drawing player on some devices\n- Improve handling queue\n- Screen should no longer dim while playing\n- Other minor improvements\n\n1.4.alpha.2\n- Added new quality settings\n- Fix drawing player on some devices\n- Fix closing fullscreen on closing player\n- Includes fixes from 1.3.3 release\n\n1.4\n- New player built with MPV\n  - 4K playback support\n  - Much better at keeping playing high quality adaptive streams\n- New player controls\n - Player gestures tap twice on the left/center/right of player to go back 10s/play-pause/go forward 10s\n - Dislikes counter from Return YouTube Dislike - disabled by default, to enable in Player settings\n- Reorganized browser toolbars\n  -Player always stays in same bottom-most place\n- Better translucency effect\n- Fixed parsing video date in subscriptions\n - Other minor changes\n\nWhat's missing (comparing to v1.3)\n- Picture-in-Picture and AirPlay\n - Subtitles\n - Playback rate change\n\nKnown issues\n- Player queue may not work properly\n - Video may close prematurely\n - Multiple seeks may cause crash\n - Some FPS may be dropped when presenting controls",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.4-alpha.3/Yattee-1.4-alpha.3-iOS.ipa",
       "localizedDescription": "Alternative YouTube frontent for iOS, tvOS and macOS built with Invidious and Piped.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 12080831,
+      "size": 12081291,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
