--- a/alt/apps.json
+++ b/alt/apps.json
@@ -27,14 +27,14 @@
       "bundleIdentifier": "stream.yattee.app.alpha",
       "developerName": "Yattee",
       "subtitle": "Alternative YouTube frontend",
-      "version": "1.4.alpha.4",
-      "versionDate": "2022-05-22",
-      "versionDescription": "- Added Picture in Picture for iOS\n- Added playback rate option\n- Added 4K, 60fps resolution (#118)\n- Added 8K resolutions\n- Added resolutions for 50fps and 48fps (#120)\n- Format VP9/WEBM is now preferred for MPV (#128)\n- Fixed displaying watch history of videos in the queue\n- Fixed behavior of restoring last played video\n- Fixed disabled state of play/pause buttons\n- Improved player drawing performance on some devices\n- Includes changes from stable 1.3.3 release:\n  - User playlists support for Piped accounts\n  - Channel subscriber count is retrieved without additional query with Piped\n- Other minor changes and fixes",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.4-alpha.4/Yattee-1.4-alpha.4-iOS.ipa",
+      "version": "1.4.alpha.6",
+      "versionDate": "2022-06-28",
+      "versionDescription": "See release notes here: https://github.com/yattee/yattee/releases/tag/v1.4-alpha.6",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.4-alpha.6/Yattee-1.4-alpha.6-iOS.ipa",
       "localizedDescription": "Alternative YouTube frontent for iOS, tvOS and macOS built with Invidious and Piped.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 12102248,
+      "size": 12091956,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
