--- a/alt/apps.json
+++ b/alt/apps.json
@@ -8,14 +8,14 @@
       "bundleIdentifier": "stream.yattee.app",
       "developerName": "Yattee",
       "subtitle": "Alternative YouTube frontend",
-      "version": "1.3.4",
-      "versionDate": "2022-05-22",
-      "versionDescription": "- Added support for user playlists with Piped accounts\n- Channel subscriber count is retrieved without additional query with Piped\n- Other minor fixes and changes",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3.4/Yattee-1.3.4-iOS.ipa",
+      "version": "1.3.5",
+      "versionDate": "2022-08-17",
+      "versionDescription": "- Fixed reported crash\n- Fixed issue where \"Add to Playlist\" window cannot be closed when there is no playlists",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3.5/Yattee-1.3.5-iOS.ipa",
       "localizedDescription": "Alternative YouTube frontent for iOS, tvOS and macOS built with Invidious and Piped.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 2512204,
+      "size": 2522502,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
