--- a/alt/apps.json
+++ b/alt/apps.json
@@ -8,14 +8,14 @@
       "bundleIdentifier": "stream.yattee.app",
       "developerName": "Yattee",
       "subtitle": "Alternative YouTube frontend",
-      "version": "1.3.5",
-      "versionDate": "2022-08-17",
+      "version": "1.5",
+      "versionDate": "2023-10-17",
       "versionDescription": "- Fixed reported crash\n- Fixed issue where \"Add to Playlist\" window cannot be closed when there is no playlists",
       "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.3.5/Yattee-1.3.5-iOS.ipa",
       "localizedDescription": "Alternative YouTube frontent for iOS, tvOS and macOS built with Invidious and Piped.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 2522502,
+      "size": 20483665,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
@@ -27,14 +27,14 @@
       "bundleIdentifier": "stream.yattee.app.alpha",
       "developerName": "Yattee",
       "subtitle": "Alternative YouTube frontend",
-      "version": "1.4.alpha.6",
-      "versionDate": "2022-06-28",
+      "version": "1.5.1-169",
+      "versionDate": "2023-11-04",
       "versionDescription": "See release notes here: https://github.com/yattee/yattee/releases/tag/v1.4-alpha.6",
-      "downloadURL": "https://github.com/yattee/yattee/releases/download/v1.4-alpha.6/Yattee-1.4-alpha.6-iOS.ipa",
+      "downloadURL": "https://github.com/yattee/yattee/releases/download/1.5.1-169/Yattee-1.5.1-iOS.ipa",
       "localizedDescription": "Alternative YouTube frontent for iOS, tvOS and macOS built with Invidious and Piped.\nFeatures:\n- Native user interface built with SwiftUI\n- Multiple instances and accounts, fast switching\n- SponsorBlock, configurable categories to skip\n- Player queue and history\n- Fullscreen playback, Picture in Picture and AirPlay support\n- Stream quality selection\n- Favorites: customizable section of channels, playlists, trending, searches and other views",
       "iconURL": "https://r.yattee.stream/icons/yattee-300-rectangle.png",
       "tintColor": "21335C",
-      "size": 12091956,
+      "size": 20678475,
       "screenshotURLs": [
         "https://r.yattee.stream/screenshots/iOS/trending.png",
         "https://r.yattee.stream/screenshots/iOS/player.png",
